tests-integration/fixtures/checking/148_derive_functor_contravariant_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Predicate :: forall (a :: Type). ((a :: Type) -> Boolean) -> Predicate (a :: Type)
Reader ::
  forall (r :: Type) (a :: Type). ((r :: Type) -> (a :: Type)) -> Reader (r :: Type) (a :: Type)
Cont ::
  forall (r :: Type) (a :: Type).
    (((a :: Type) -> (r :: Type)) -> (r :: Type)) -> Cont (r :: Type) (a :: Type)

Types
Predicate :: Type -> Type
Reader :: Type -> Type -> Type
Cont :: Type -> Type -> Type

Data
Predicate
  Quantified = :0
  Kind = :0

Reader
  Quantified = :0
  Kind = :0

Cont
  Quantified = :0
  Kind = :0


Roles
Predicate = [Representational]
Reader = [Representational, Representational]
Cont = [Representational, Representational]

Derived
derive Functor (Predicate :: Type -> Type)
derive Functor (Reader (r :: Type) :: Type -> Type)
derive Functor (Cont (r :: Type) :: Type -> Type)

Diagnostics
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (~a :: Type)
  --> 6:1..6:34
  |
6 | derive instance Functor Predicate
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
